# Edge-ASR-Optimizer

./: .gitignore  README.md  audio_to_clips_pipeline.py  cinereplique_app.py  cinereplique_app.py.backup  participants.txt  playphrase_original.py  playphrase_original.py.backup  test_preprocessing.py  test_processor.py
.streamlit/: config.toml
edge_asr_optimizer/: __init__.py  processor.py
interface_output/joueur_20260627_202454/: input.srt
interface_output/joueur_20260627_203347/: input.srt
interface_output/joueur_20260627_204130/: 01_Inconnu.srt  02_Inconnu.srt  input.srt
interface_output/joueur_20260627_204612/: 01_Inconnu.srt  input.srt
interface_output/joueur_20260627_204843/: input.srt
interface_output/joueur_20260627_205358/: input.srt
interface_output/joueur_20260627_215453/: input.srt
interface_output/joueur_20260627_215901/: input.srt
interface_output/joueur_20260627_230019/: input.srt
interface_output/joueur_20260627_230301/: input.srt
interface_output/joueur_20260627_230347/: input.srt
interface_output/joueur_20260627_231809/: input.srt
old/: .gitignore  processor.py  pyproject.toml  test_batch.py  test_preprocessing.py  test_whisper.py
old/app/: main.py
old/src/audio/: pipeline.py
