[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "edge-asr-optimizer"
version = "0.1.0"
description = "ML-powered on-device audio preprocessing pipeline for ASR"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "IMT Atlantique — Embedded AI & DSP Research" }]
requires-python = ">=3.10"
keywords = ["asr", "speech", "denoising", "vad", "edge-ai", "onnx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
asr-optimizer = "edge_asr_optimizer.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/edge_asr_optimizer --cov-report=term-missing"
